# npm-sentinel

./: README.md  pyproject.toml
npm_sentinel/: __init__.py  hook_inspector.py  mcp_detector.py  models.py  renderer.py  scanner.py  trusted_packages.py  typosquat.py
tests/: __init__.py  test_models.py  test_scanner.py  test_typosquat.py
