[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "npm-sentinel"
version = "0.1.0"
description = "A CLI security tool that audits package.json and node_modules for supply chain attack vectors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "npm-sentinel contributors" },
]
keywords = ["npm", "security", "supply-chain", "typosquat", "audit", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "rapidfuzz>=3.6",
    "rich>=13.7",
]

[project.scripts]
npm-sentinel = "npm_sentinel.cli:main"

[project.urls]
Homepage = "https://github.com/npm-sentinel/npm-sentinel"
Repository = "https://github.com/npm-sentinel/npm-sentinel"
Issues = "https://github.com/npm-sentinel/npm-sentinel/issues"

[tool.hatch.build.targets.wheel]
packages = ["npm_sentinel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
